# 4mc

./: .gitignore  .travis.yml  4mc-format-spec  4mz-format-spec  LICENSE  README  Readme.md  appveyor.yml
java/: pom.xml
java/examples/: pom.xml
java/examples/src/main/java/com/fing/fourmc/elephantbird/adapter/: FourMcEbProtoInputFormat.java  FourMcEbProtoOutputFormat.java  FourMzEbProtoInputFormat.java  FourMzEbProtoOutputFormat.java
java/examples/src/main/java/com/fing/fourmc/mapreduce/protobuf/lz4/: TestProtobufIO.java
java/examples/src/main/java/com/fing/fourmc/mapreduce/protobuf/zstd/: TestProtobufIO.java
java/examples/src/main/java/com/fing/fourmc/mapreduce/text/lz4/: TestTextInput.java
java/examples/src/main/java/com/fing/fourmc/mapreduce/text/zstd/: TestTextInput.java
java/examples/src/main/java/com/fing/fourmc/protobuf/: USER.java
java/examples/src/main/java/com/fing/fourmc/spark/protobuf/: TestProtobufInput.java
java/examples/src/main/java/com/hadoop/fourmc/elephantbird/adapter/: FourMcEbProtoInputFormat.java  FourMcEbProtoOutputFormat.java  FourMzEbProtoInputFormat.java  FourMzEbProtoOutputFormat.java
java/examples/src/main/java/com/hadoop/fourmc/mapreduce/protobuf/lz4/: TestProtobufIO.java
java/examples/src/main/java/com/hadoop/fourmc/mapreduce/protobuf/zstd/: TestProtobufIO.java
java/examples/src/main/java/com/hadoop/fourmc/mapreduce/text/lz4/: TestTextInput.java
java/examples/src/main/java/com/hadoop/fourmc/mapreduce/text/zstd/: TestTextInput.java
java/examples/src/main/java/com/hadoop/fourmc/protobuf/: USER.java
java/examples/src/main/java/com/hadoop/fourmc/protobuf/lz4/: TestProtobufIO.java
java/examples/src/main/java/com/hadoop/fourmc/protobuf/zstd/: TestProtobufIO.java
java/examples/src/main/java/com/hadoop/fourmc/spark/protobuf/: TestProtobufInput.java
java/examples/src/main/resources/: user.proto
java/hadoop-4mc/: pom.xml
java/hadoop-4mc/src/examples/elephant-bird/: FourMcEbProtoInputFormat.java  FourMcEbProtoOutputFormat.java  FourMzEbProtoInputFormat.java  FourMzEbProtoOutputFormat.java
java/hadoop-4mc/src/examples/text/: TestTextInput.java
java/hadoop-4mc/src/main/java/com/fing/compression/fourmc/: FourMcBlockIndex.java  FourMcCodec.java  FourMcHighCodec.java  FourMcInputFormatUtil.java  FourMcInputStream.java  FourMcMediumCodec.java  FourMcNativeCodeLoader.java  FourMcOutputStream.java  FourMcUltraCodec.java  FourMzBlockIndex.java  FourMzCodec.java  FourMzHighCodec.java  FourMzInputStream.java  FourMzMediumCodec.java  FourMzOutputStream.java  FourMzUltraCodec.java  Lz4Codec.java  Lz4Compressor.java  Lz4Decompressor.java  Lz4HighCodec.java  Lz4HighCompressor.java  Lz4MediumCodec.java  Lz4MediumCompressor.java  Lz4UltraCodec.java  Lz4UltraCompressor.java  ZstCodec.java  ZstdCodec.java  ZstdCompressor.java  ZstdDecompressor.java  ZstdHighCodec.java  ZstdHighCompressor.java  ZstdMediumCodec.java  ZstdMediumCompressor.java  ZstdUltraCodec.java  ZstdUltraCompressor.java
java/hadoop-4mc/src/main/java/com/fing/compression/fourmc/util/: DirectBufferPool.java  HadoopUtils.java
java/hadoop-4mc/src/main/java/com/fing/compression/fourmc/zstd/: Zstd.java  ZstdStreamCompressor.java  ZstdStreamDecompressor.java
java/hadoop-4mc/src/main/java/com/fing/mapreduce/: FourMcInputFormat.java  FourMcLineRecordReader.java  FourMcTextInputFormat.java  FourMzInputFormat.java  FourMzLineRecordReader.java  FourMzTextInputFormat.java
java/hadoop-4mc/src/main/java/com/hadoop/compression/fourmc/: FourMcBlockIndex.java  FourMcCodec.java  FourMcHighCodec.java  FourMcInputFormatUtil.java  FourMcInputStream.java  FourMcMediumCodec.java  FourMcNativeCodeLoader.java  FourMcOutputStream.java  FourMcUltraCodec.java  FourMzBlockIndex.java  FourMzCodec.java  FourMzHighCodec.java  FourMzInputStream.java  FourMzMediumCodec.java  FourMzOutputStream.java  FourMzUltraCodec.java  Lz4Codec.java  Lz4Compressor.java  Lz4Decompressor.java  Lz4HighCodec.java  Lz4HighCompressor.java  Lz4MediumCodec.java  Lz4MediumCompressor.java  Lz4UltraCodec.java  Lz4UltraCompressor.java  ZstCodec.java  ZstdCodec.java  ZstdCompressor.java  ZstdDecompressor.java  ZstdHighCodec.java  ZstdHighCompressor.java  ZstdMediumCodec.java  ZstdMediumCompressor.java  ZstdUltraCodec.java  ZstdUltraCompressor.java
java/hadoop-4mc/src/main/java/com/hadoop/compression/fourmc/util/: DirectBufferPool.java  HadoopUtils.java
java/hadoop-4mc/src/main/java/com/hadoop/compression/fourmc/zstd/: Zstd.java  ZstdStreamCompressor.java  ZstdStreamDecompressor.java
java/hadoop-4mc/src/main/java/com/hadoop/mapreduce/: FourMcInputFormat.java  FourMcLineRecordReader.java  FourMcTextInputFormat.java  FourMzInputFormat.java  FourMzLineRecordReader.java  FourMzTextInputFormat.java
java/hadoop-4mc/src/main/resources/com/fing/compression/fourmc/darwin/arm64/: libhadoop-4mc.dylib
java/hadoop-4mc/src/main/resources/com/fing/compression/fourmc/darwin/x86_64/: libhadoop-4mc.dylib
java/hadoop-4mc/src/main/resources/com/hadoop/compression/fourmc/darwin/x86_64/: libhadoop-4mc.dylib
java/hadoop-4mc/src/test/java/com/fing/compression/fourmc/: TestFourMcBlockIndex.java  TestFourMcCodec.java
java/hadoop-4mc/src/test/java/com/hadoop/compression/fourmc/: RandomDatum.java  TestFourMcBlockIndex.java  TestFourMcCodec.java
native/: 4mc.1  4mc.c  4mc.h  4mccli.c  Makefile  jniCompressor.c  jniDecompressor.c  jniZStreamCompressor.c  jniZStreamDecompressor.c  jniZstd.c  jniZstdCompressor.c  jniZstdDecompressor.c  jnihelper.h
native/cmake/: CMakeLists.txt
native/lz4/: lz4hc.c  lz4mc.c  lz4mc.h
tool/darwin/arm64/: 4mc
tool/darwin/x86_64/: 4mc
tool/linux/amd64/: 4mc
tool/linux/i386/: 4mc
